<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="485dp"
        android:layout_height="220dp"
        android:src="@drawable/top_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/login_background" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/app_logo_colorized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/app_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginVertical="30dp"
            />


        <EditText
            android:id="@+id/txt_email"
            android:layout_width="325dp"
            android:layout_height="51dp"
            android:background="@drawable/edittext_border"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15dp"
            android:paddingStart="22dp"
            android:drawableStart="@drawable/icon_mail"
            android:drawablePadding="22dp"
            android:hint="@string/email"
            android:textColor="@color/grey"
            android:layout_marginBottom="24dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="emailAddress" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="328dp"
            android:layout_height="55dp"
            app:hintEnabled="false"
            android:layout_marginBottom="18dp"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/grey"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icon_lock"
                android:drawablePadding="16dp"
                android:paddingStart="18dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/password"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            >

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/grey"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_passowrd"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="end"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                />

        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="100dp"
            android:layout_width="311dp"
            android:layout_height="56dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:background="@drawable/button_background_puple"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>