<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.WelcomeFragment"
    android:padding="0dp"
    android:layout_margin="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        >

        <!-- Welcome Header -->
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_todo"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="8dp" />

        <!-- Welcome Description -->
        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_header_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="24dp" />

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/app_logo_colorized"
            android:layout_marginVertical="100dp"
            />

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            android:background="@drawable/button_background_white"
            android:layout_marginVertical="24dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            />

        <!-- Login Button -->
        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            android:background="@drawable/button_background_white"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            />

    </LinearLayout>
</FrameLayout>