<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/todo_background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.todo.SqlTodoFragment"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:src="@drawable/home_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/todo_image_header_background" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="87dp"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="119dp"
            android:text="@string/my_todo_list"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="@id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_todos_uncompleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/row_todo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@drawable/todo_background"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/completed"
                    android:textStyle="bold"
                    android:layout_marginVertical="15dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_todos_completed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/row_todo" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimary"
        app:fabCradleMargin="1dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:hideOnScroll="true"
        app:menu="@menu/bottom_control"
        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_navigation_view"
            android:layout_marginEnd="20dp"
            app:labelVisibilityMode="labeled"
            android:background="@android:color/transparent"
            app:menu="@menu/bottom_nav_menu"
            />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_app_bar"
        android:backgroundTint="@color/primary"
        android:src="@drawable/baseline_add_24"
        app:maxImageSize="30dp"
        app:tint="@color/white"
        android:contentDescription="@string/add_todo" />
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
